01_helloworld/ingress_path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /helloworld_v2
        backend:
          serviceName: helloworld-v2-nodeport
          servicePort: 8080
